--- a/index.html
+++ b/index.html
@@ -5,35 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/bootstrap.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
+    <link href="./css/homepage.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Oswald&family=Poppins:wght@500&display=swap" rel="stylesheet">
     <title>Cui'zine</title>
 </head>
 <body>
     <header>  
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+      <nav class="navbar navbar-expand-lg static-top border-bottom"> 
         <div class="container">
-          <a class="navbar-brand" href="#">Cui'zine</a>
+          <a class="navbar-brand Courgette text-white"  href="#">Cui'zine</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Acceuil</a>
+                <a class="nav-link active text-white" aria-current="page" href="#">Acceuil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Equipe</a>
+                <a class="nav-link text-muted" href="#">Equipe</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link text-muted" href="#">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link text-muted" href="#">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      
+      <div class="row">
+        <div class="col-lg-3">
+        <div class="logo">
+            <img src="./img/logo_square_white.png" alt="logo">
+        </div>
+        <div class="Courgette">
+          <h1>Cui'zine</h1>
+          <h3> Le mag Cuisine</h3>      
+        </div>
+      </div>
+    </div>
+
     </header>
     <script src="js/bootstrap.js"></script>
 </body>
