--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>  
-      <nav class="navbar navbar-expand-lg static-top border-bottom"> 
+      <nav class="navbar navbar-expand-lg static-top border-bottom "> 
         <div class="container">
           <a class="navbar-brand Courgette text-white"  href="#">Cui'zine</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,12 +37,12 @@
           </div>
         </div>
       </nav>
-      <div class="row">
-        <div class="col-lg-3">
+      <div class="row justify-content-center">
+        <div class="col-2">
         <div class="logo">
             <img src="./img/logo_square_white.png" alt="logo">
         </div>
-        <div class="Courgette">
+        <div class="Courgette text-center text-white">
           <h1>Cui'zine</h1>
           <h3> Le mag Cuisine</h3>      
         </div>
