--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 <body>
     <header>  
+      <img src="./img/header.jpg" alt="header" class="backgroung-header" width="100%" height="50%">
       <nav class="navbar navbar-expand-lg static-top border-bottom "> 
         <div class="container">
           <a class="navbar-brand Courgette text-white"  href="#">Cui'zine</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -37,10 +38,10 @@
           </div>
         </div>
       </nav>
-      <div class="row justify-content-center">
-        <div class="col-2">
+      <div class="row justify-content-center position">
+        <div class="text-center">
         <div class="logo">
-            <img src="./img/logo_square_white.png" alt="logo">
+            <img src="./img/logo_square_white.png" alt="logo" width="5%">
         </div>
         <div class="Courgette text-center text-white">
           <h1>Cui'zine</h1>
@@ -48,8 +49,15 @@
         </div>
       </div>
     </div>
+   </header> <br>
+   <main>
+    <section>
+          <div class="Courgette text-center">
+                <h2>Derniers articles</h2>
+            </div>
+    </section>
 
-    </header>
+   </main>
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
