--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link href="./css/bootstrap.css" rel="stylesheet">
     <link href="./css/main.css" rel="stylesheet">
     <link href="./css/homepage.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Oswald&family=Poppins:wght@500&display=swap" rel="stylesheet">
     <title>Cui'zine</title>
 </head>
 <body>
     <header>  
       <img src="./img/header.jpg" alt="header" class="backgroung-header" width="100%" height="50%">
-      <nav class="navbar navbar-expand-lg static-top border-bottom "> 
+      <nav class="navbar navbar-expand-lg navbar-dark static-top border-bottom "> 
         <div class="container">
           <a class="navbar-brand Courgette text-white"  href="#">Cui'zine</a>
           <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
       <div class="row justify-content-center position">
         <div class="text-center">
         <div class="logo">
-            <img src="./img/logo_square_white.png" alt="logo" width="5%">
+            <img src="./img/logo_square_white.png" alt="logo" width="60px">
         </div>
         <div class="Courgette text-center text-white">
           <h1>Cui'zine</h1>
@@ -52,9 +52,42 @@
    </header> <br>
    <main>
     <section>
-          <div class="Courgette text-center">
+          <div class="Oswald text-center">
                 <h2>Derniers articles</h2>
+          </div>
+    </section> <br>
+    <section> 
+      <div class="container1">
+        <div class="row">
+            <div class="col-md-8">
+                <img style='float:left;width:250px;height:150px; margin-right:30px;' src="../digitous-html-cuisine-main/img/articles/suzette/suzette-small.jpg" />
+                <h4 class="Courgette">Chez Suzette, la nouvelle creperie qui fait parler d'elle</h4>
+                <p class="Oswald">La franchise "Chez Suzette" qui fait un carton chez les bretons ouvre son restaurant à Paris dans le quartier latin. Antoine de Cui'zine a testé pour vous les saveurs sucrés, salés au froment ou au sarrazin !</p>
             </div>
+        </div>
+    </section> 
+    <section> 
+      <div class="container1">
+        <div class="row">
+            <div class="col-md-8">
+                <img style='float:left;width:250px;height:150px; margin-right:30px;' src="../digitous-html-cuisine-main/img/articles/metro/metro-small.jpg" />
+                <h4 class="Courgette">Le Métro dessert</h4>
+                <p class="Oswald">Germain est ferrovipathe (ndlr: fan de train). son fils Maxime est pâtissier. Ils ont décidé de réunir leur deux passions dans un
+                  restaurant à la déco inspiré du métro parisien. A voir absolument, mais qu'en est-il d'y aller pour manger ? Clémentine entre en gare
+                  et nous donne son avis</p>
+            </div>
+        </div>
+    </section>
+    <section> 
+      <div class="container1">
+        <div class="row">
+            <div class="col-md-8">
+                <img style='float:left;width:250px;height:150px; margin-right:30px;' src="../digitous-html-cuisine-main/img/articles/vitaly/vitaly-small.jpg" />
+                <h4 class="Courgette">Vitaly, le végan italien</h4>
+                <p class="Oswald">Ouand on pense italien, on pense lasagne et jambon de Parme. Ils l'ont fait les saveurs de
+                  c'est moi Tony qui vais le tester pour vous.</p>
+            </div>
+        </div>
     </section>
 
    </main>
