--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="./img/header.jpg" alt="header" class="backgroung-header" width="100%" height="50%">
       <nav class="navbar navbar-expand-lg navbar-dark static-top border-bottom "> 
         <div class="container">
-          <a class="navbar-brand Courgette text-white"  href="#">Cui'zine</a>
+          <a class="navbar-brand Courgette text-white title1"  href="#">Cui'zine</a>
           <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -89,8 +89,47 @@
             </div>
         </div>
     </section>
-
+    <section> 
+      <div class="container1">
+            <p class="Oswald">« Voir les articles précédents</p>
+      </div>
+    </section>
    </main>
+   <footer>
+      <footer
+              class="text-center text-lg-start text-white"
+              style="background-color: #000000"
+              >
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+          <section>
+             <div class="row">
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                  <h6 class="text-uppercase mb-4 Courgette">Catégories</h6>
+                  <p>
+                    <a class="text-white Oswald">Revues</a>
+                  </p>
+                  <p>
+                    <a class="text-white Oswald">Recettes</a>
+                  </p>
+                  <p>
+                    <a class="text-white Oswald">Découvertes</a>
+                  </p>
+              </div>
+               <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                <h6 class="text-uppercase mb-4 Courgette">Archives</h6>
+                <p>
+                  <a class="text-white Oswald">2019</a>
+                </p>
+                <p>
+                  <a class="text-white Oswald">2018</a>
+                </p>
+                <p>
+                  <a class="text-white Oswald">2017</a>
+                </p>
+              </div>
+            
+   </footer>
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
