--- a/index.html
+++ b/index.html
@@ -159,8 +159,16 @@
               </div>
               <!-- Grid column -->
               <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                <h6 class="text-uppercase mb-4 font-weight-bold">Newsletter</h6>
-                  <h6 class="Courgette marge-h6">Partager</h6>
+                <form>
+                  <div class="form-group title2">
+                    <label for="exampleInputEmail1" class="Courgette">Newsletter</label>
+                  </div>
+                  <div class="form-group form-footer1">
+                      <input type="email" class="form-control padding-form w-100" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                      <button type="submit" class="btn btn-dark btn-inline-dark pull-right">S'inscrire</button>
+                  </div>
+              </form>
+                  <h6 class="Courgette title2 partager">Partager</h6>
                   <div class="icon-group1">
                       <i class="fab fa-facebook-square icon"></i>
                       <i class="fab fa-instagram icon "></i>
