--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link href="./css/homepage.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Oswald&family=Poppins:wght@500&display=swap" rel="stylesheet">
-    <link href="../digitous-html-cuisine-main/fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet">
+    <link href="../ProjetBootstrap-master/fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet">
     <title>Cui'zine</title>
 </head>
 <body>
   <!-- Partie navigation-->
     <header>  
-      <img src="./img/header.jpg" alt="header" class="backgroung-header" width="100%" height="50%">
+      <img src="./img/header.jpg" alt="header" class="backgroung-header" width="100%" height="400rem">
       <nav class="navbar navbar-expand-lg navbar-dark static-top border-bottom "> 
         <div class="container">
           <a class="navbar-brand Courgette text-white title1"  href="#">Cui'zine</a>
@@ -44,7 +44,7 @@
       <div class="row justify-content-center position">
         <div class="text-center">
         <div class="logo">
-            <img src="./img/logo_square_white.png" alt="logo" width="60px">
+            <img src="../ProjetBootstrap-master/img/logo_square_white.png" alt="logo" width="60px">
         </div>
         <div class="Courgette text-center text-white">
           <h1>Cui'zine</h1>
@@ -92,7 +92,7 @@
       <div class="container1">
         <div class="row">
             <div class="col-md-8">
-                <img style='float:left;width:250px;height:150px; margin-right:30px;' src="../digitous-html-cuisine-main/img/articles/suzette/suzette-small.jpg" />
+                <img style='float:left;width:250px;height:150px; margin-right:30px;' src="../ProjetBootstrap-master/img/articles/suzette/suzette-small.jpg" />
                 <h4 class="Courgette">Chez Suzette, la nouvelle creperie qui fait parler d'elle</h4>
                 <p class="Oswald">La franchise "Chez Suzette" qui fait un carton chez les bretons ouvre son restaurant à Paris dans le quartier latin. Antoine de Cui'zine a testé pour vous les saveurs sucrés, salés au froment ou au sarrazin !</p>
             </div>
@@ -102,7 +102,7 @@
       <div class="container1">
         <div class="row">
             <div class="col-md-8">
-                <img style='float:left;width:250px;height:150px; margin-right:30px;' src="../digitous-html-cuisine-main/img/articles/metro/metro-small.jpg" />
+                <img style='float:left;width:250px;height:150px; margin-right:30px;' src="../ProjetBootstrap-master/img/articles/metro/metro-small.jpg">
                 <h4 class="Courgette">Le Métro dessert</h4>
                 <p class="Oswald">Germain est ferrovipathe (ndlr: fan de train). son fils Maxime est pâtissier. Ils ont décidé de réunir leur deux passions dans un
                   restaurant à la déco inspiré du métro parisien. A voir absolument, mais qu'en est-il d'y aller pour manger ? Clémentine entre en gare
@@ -114,7 +114,7 @@
       <div class="container1">
         <div class="row">
             <div class="col-md-8">
-                <img style='float:left;width:250px;height:150px; margin-right:30px;' src="../digitous-html-cuisine-main/img/articles/vitaly/vitaly-small.jpg" />
+                <img style='float:left;width:250px;height:150px; margin-right:30px;' src="../ProjetBootstrap-master/img/articles/vitaly/vitaly-small.jpg" />
                 <h4 class="Courgette">Vitaly, le végan italien</h4>
                 <p class="Oswald">Ouand on pense italien, on pense lasagne et jambon de Parme. Ils l'ont fait les saveurs de
                   c'est moi Tony qui vais le tester pour vous.</p>
@@ -177,12 +177,8 @@
                   </div>
               </div>
             </div>
-              </div>
-              <!-- Grid column -->
-            </div>
-            <!--Grid row-->
           </section>
    </footer>
-  <script src="js/bootstrap.js"></script>
+  <script src="bootstrap.js"></script>
 </body>
 </html>
