--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/bootstrap.css" rel="stylesheet">
     <link href="./css/main.css" rel="stylesheet">
@@ -56,7 +55,7 @@
    <main>
   <!-- Partie recherche et newsletter-->
     <aside>
-      <div class="container">
+      <div class="container d-none d-md-block">
         <form>
             <div class="form-group">
                 <label for="exampleInputText1" class="Courgette">Recherche</label>
@@ -133,7 +132,7 @@
         <div class="container p-4 pb-0">
           <section>
              <div class="row">
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                <div class="col-md-4 col-lg-2 col-xl-2 mx-auto mt-3">
                   <h6 class="text-uppercase mb-4 Courgette">Catégories</h6>
                   <p>
                     <a class="text-white Oswald">Revues</a>
@@ -145,7 +144,7 @@
                     <a class="text-white Oswald">Découvertes</a>
                   </p>
               </div>
-               <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+               <div class="col-md-4 col-lg-2 col-xl-2 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 Courgette">Archives</h6>
                 <p>
                   <a class="text-white Oswald">2019</a>
