--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </section>
   
    </main>
-      <footer class="text-center text-lg-start text-white" style="background-color: #000000">
+      <footer class="text-lg-start text-white" style="background-color: #000000">
         <!-- Grid container -->
         <div class="container p-4 pb-0">
           <section>
@@ -163,7 +163,7 @@
                     <label for="exampleInputEmail1" class="Courgette">Newsletter</label>
                   </div>
                   <div class="form-group form-footer1">
-                      <input type="email" class="form-control padding-form w-100" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                      <input type="email" class="form-control padding-form w-50" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
                       <button type="submit" class="btn btn-dark btn-inline-dark pull-right">S'inscrire</button>
                   </div>
               </form>
