--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,92 @@
     <title>Cui'zine</title>
 </head>
 <body>
+    <header>  
+        <img src="./img/header.jpg" alt="header" class="backgroung-header" width="100%" height="400rem">
+        <nav class="navbar navbar-expand-lg navbar-dark static-top border-bottom "> 
+          <div class="container">
+            <a class="navbar-brand Courgette text-white title1"  href="#">Cui'zine</a>
+            <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link active text-white" aria-current="page" href="../ProjetBootstrap-master/index.html">Acceuil</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-muted" href="#">Equipe</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-muted" href="#">Blog</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-muted" href="../digitous-html-cuisine-main/contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      <!-- Partie logo avec texte-->
+        <div class="row justify-content-center position">
+          <div class="text-center">
+          <div class="logo">
+              <img src="../ProjetBootstrap-master/img/logo_square_white.png" alt="logo" width="60px">
+          </div>
+          <div class="Courgette text-center text-white">
+            <h1>Nous contacter</h1>     
+          </div>
+        </div>
+      </div>
+     </header>   
+            <!-- Partie recherche et newsletter-->
+    <aside>
+        <div class="container d-none d-md-block">
+          <form>
+              <div class="form-group">
+                  <label for="exampleInputText1" class="Courgette">Recherche</label>
+                  <input type="text" class="form-control padding-form w-100" id="exampleInputText1" placeholder="Recherche...">
+              </div>
+              <button type="submit" class="btn btn-light btn-outline-dark col-12">Ok</button>
+          </form>
+          <form>
+              <div class="form-group">
+                  <label for="exampleInputEmail1" class="Courgette">Newsletter</label>
+                  <input type="email" class="form-control padding-form w-100" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                  <button type="submit" class="btn btn-light btn-outline-dark col-12 ">S'inscrire</button>
+              </div>
+          </form>
+          <div class="icon-title">
+              <h6 class="Courgette marge-h6">Partager</h6>
+              <div class="icon-group">
+                  <i class="fab fa-facebook-square icon"></i>
+                  <i class="fab fa-instagram icon"></i>
+                  <i class="fab fa-youtube icon"></i>
+                  <i class="fab fa-twitter icon"></i>
+              </div>
+          </div>
+        </div>
+      </aside>
+     <main>
+      <!-- Partie adresse-->
+    <section>
+        <div class="Courgette contacttitle">
+              <h2>Contact</h2>
+       </div>
+    </section>
+    <section> 
+        <div class="container2">
+          <div class="row">
+                <h3 class="Courgette">Adresse</h3>
+                <p class="Oswald">Station F <br></p>
+                <p class="Oswald">5 Parvis Alan Turing<br></p>
+                <p class="Oswald">75013 Paris<br></p>
+          </div>
+        </div>
+    </section> 
+    <!-- Partie map-->
     
+     </main>
+  <script src="bootstrap.js"></script>
 </body>
 </html>
