--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="#">Acceuil</a>
+                <a class="nav-link active text-white" aria-current="page" href="../ProjetBootstrap-master/index.html">Acceuil</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-muted" href="#">Equipe</a>
@@ -33,7 +33,7 @@
                 <a class="nav-link text-muted" href="#">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-muted" href="#">Contact</a>
+                <a class="nav-link text-muted" href="../digitous-html-cuisine-main/contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -52,39 +52,39 @@
       </div>
     </div>
    </header>   
-   <main>
-  <!-- Partie recherche et newsletter-->
-    <aside>
-      <div class="container d-none d-md-block">
-        <form>
-            <div class="form-group">
-                <label for="exampleInputText1" class="Courgette">Recherche</label>
-                <input type="text" class="form-control padding-form w-100" id="exampleInputText1" placeholder="Recherche...">
-            </div>
-            <button type="submit" class="btn btn-light btn-outline-dark col-12">Ok</button>
-        </form>
-        <form>
-            <div class="form-group">
-                <label for="exampleInputEmail1" class="Courgette">Newsletter</label>
-                <input type="email" class="form-control padding-form w-100" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
-                <button type="submit" class="btn btn-light btn-outline-dark col-12 ">S'inscrire</button>
-            </div>
-        </form>
-        <div class="icon-title">
-            <h6 class="Courgette marge-h6">Partager</h6>
-            <div class="icon-group">
-                <i class="fab fa-facebook-square icon"></i>
-                <i class="fab fa-instagram icon"></i>
-                <i class="fab fa-youtube icon"></i>
-                <i class="fab fa-twitter icon"></i>
-            </div>
-        </div>
+   <!-- Partie recherche et newsletter-->
+   <aside>
+    <div class="container d-none d-md-block">
+      <form>
+          <div class="form-group">
+              <label for="exampleInputText1" class="Courgette">Recherche</label>
+              <input type="text" class="form-control padding-form w-100" id="exampleInputText1" placeholder="Recherche...">
+          </div>
+          <button type="submit" class="btn btn-light btn-outline-dark col-12">Ok</button>
+      </form>
+      <form>
+          <div class="form-group">
+              <label for="exampleInputEmail1" class="Courgette">Newsletter</label>
+              <input type="email" class="form-control padding-form w-100" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+              <button type="submit" class="btn btn-light btn-outline-dark col-12 ">S'inscrire</button>
+          </div>
+      </form>
+      <div class="icon-title">
+          <h6 class="Courgette marge-h6">Partager</h6>
+          <div class="icon-group">
+              <i class="fab fa-facebook-square icon"></i>
+              <i class="fab fa-instagram icon"></i>
+              <i class="fab fa-youtube icon"></i>
+              <i class="fab fa-twitter icon"></i>
+          </div>
       </div>
-    </aside>
+    </div>
+  </aside>
+   <main>
 <!-- Partie articles-->
     <section>
           <div class="Oswald text-center">
-                <h2>Derniers articles</h2>
+              <h2>Derniers articles</h2>
           </div>
     </section> 
     <section> 
@@ -125,8 +125,7 @@
             <p class="Oswald">« Voir les articles précédents</p>
       </div>
     </section>
-  
-   </main>
+  </main>
       <footer class="text-lg-start text-white" style="background-color: #000000">
         <!-- Grid container -->
         <div class="container p-4 pb-0">
