--- a/contact.html
+++ b/contact.html
@@ -96,8 +96,61 @@
         </div>
     </section> 
     <!-- Partie map-->
-    
+    <section>
+        <div class="mapouter"><div class="gmap_canvas"><iframe width="798" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=5%20Parvis%20Alan%20Turing%2075013%20Paris&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:798px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:798px;}</style></div></div>
+    </section>
      </main>
+     <footer class="text-lg-start text-white" style="background-color: #000000">
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+          <section>
+             <div class="row">
+                <div class="col-md-4 col-lg-2 col-xl-2 mx-auto mt-3">
+                  <h6 class="text-uppercase mb-4 Courgette">Catégories</h6>
+                  <p>
+                    <a class="text-white Oswald">Revues</a>
+                  </p>
+                  <p>
+                    <a class="text-white Oswald">Recettes</a>
+                  </p>
+                  <p>
+                    <a class="text-white Oswald">Découvertes</a>
+                  </p>
+              </div>
+               <div class="col-md-4 col-lg-2 col-xl-2 mx-auto mt-3">
+                <h6 class="text-uppercase mb-4 Courgette">Archives</h6>
+                <p>
+                  <a class="text-white Oswald">2019</a>
+                </p>
+                <p>
+                  <a class="text-white Oswald">2018</a>
+                </p>
+                <p>
+                  <a class="text-white Oswald">2017</a>
+                </p>
+              </div>
+              <!-- Grid column -->
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                <form>
+                  <div class="form-group title2">
+                    <label for="exampleInputEmail1" class="Courgette">Newsletter</label>
+                  </div>
+                  <div class="form-group form-footer1">
+                      <input type="email" class="form-control padding-form w-50" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                      <button type="submit" class="btn btn-dark btn-inline-dark pull-right">S'inscrire</button>
+                  </div>
+              </form>
+                  <h6 class="Courgette title2 partager">Partager</h6>
+                  <div class="icon-group1">
+                      <i class="fab fa-facebook-square icon"></i>
+                      <i class="fab fa-instagram icon "></i>
+                      <i class="fab fa-youtube icon"></i>
+                      <i class="fab fa-twitter icon"></i>
+                  </div>
+              </div>
+            </div>
+          </section>
+   </footer>
   <script src="bootstrap.js"></script>
 </body>
 </html>
