--- a/contact.html
+++ b/contact.html
@@ -81,23 +81,27 @@
      <main>
       <!-- Partie adresse-->
     <section>
-        <div class="Courgette contacttitle">
+        <div class="Courgette contacttitle ">
               <h2>Contact</h2>
        </div>
     </section>
     <section> 
         <div class="container2">
           <div class="row">
+            <div class="col-md-8">
                 <h3 class="Courgette">Adresse</h3>
                 <p class="Oswald">Station F <br></p>
                 <p class="Oswald">5 Parvis Alan Turing<br></p>
                 <p class="Oswald">75013 Paris<br></p>
+            </div>
           </div>
         </div>
     </section> 
     <!-- Partie map-->
     <section>
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="798" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=5%20Parvis%20Alan%20Turing%2075013%20Paris&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:798px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:798px;}</style></div></div>
+        <div class="map responsive">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2626.241120643117!2d2.368575015791587!3d48.83453927928506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e673e2ee6fdea5%3A0x292dd19df5ea3792!2s5%20Parv.%20Alan%20Turing%2C%2075013%20Paris!5e0!3m2!1sfr!2sfr!4v1639053944750!5m2!1sfr!2sfr" width="600" height="450" style="border:0; margin-left: auto; margin-right: auto;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </section>
      </main>
      <footer class="text-lg-start text-white" style="background-color: #000000">
