--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                   <a class="nav-link text-muted" href="#">Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-muted" href="../digitous-html-cuisine-main/contact.html">Contact</a>
+                  <a class="nav-link text-muted" href="../ProjetBootstrap-master/contact.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -100,7 +100,7 @@
     <!-- Partie map-->
     <section>
         <div class="map responsive">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2626.241120643117!2d2.368575015791587!3d48.83453927928506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e673e2ee6fdea5%3A0x292dd19df5ea3792!2s5%20Parv.%20Alan%20Turing%2C%2075013%20Paris!5e0!3m2!1sfr!2sfr!4v1639053944750!5m2!1sfr!2sfr" width="600" height="450" style="border:0; margin-left: auto; margin-right: auto;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2626.241120643117!2d2.368575015791587!3d48.83453927928506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e673e2ee6fdea5%3A0x292dd19df5ea3792!2s5%20Parv.%20Alan%20Turing%2C%2075013%20Paris!5e0!3m2!1sfr!2sfr!4v1639053944750!5m2!1sfr!2sfr" width="60%" height="400rem" style="border:0; margin-left: 12em;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </section>
      </main>
