--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <img src="./img/header.jpg" alt="header" class="backgroung-header" width="100%" height="400rem">
         <nav class="navbar navbar-expand-lg navbar-dark static-top border-bottom "> 
           <div class="container">
-            <a class="navbar-brand Courgette text-white title1"  href="#">Cui'zine</a>
+            <a class="navbar-brand Courgette text-white title1" href="#">Cui'zine</a>
             <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,14 +45,14 @@
               <img src="../ProjetBootstrap-master/img/logo_square_white.png" alt="logo" width="60px">
           </div>
           <div class="Courgette text-center text-white">
-            <h1>Nous contacter</h1>     
+            <h2>Nous contacter</h2>     
           </div>
         </div>
       </div>
      </header>   
             <!-- Partie recherche et newsletter-->
     <aside>
-        <div class="container d-none d-md-block">
+        <div class="container d-none d-lg-block">
           <form>
               <div class="form-group">
                   <label for="exampleInputText1" class="Courgette">Recherche</label>
@@ -68,7 +68,7 @@
               </div>
           </form>
           <div class="icon-title">
-              <h6 class="Courgette marge-h6">Partager</h6>
+              <h6 class="Courgette">Partager</h6>
               <div class="icon-group">
                   <i class="fab fa-facebook-square icon"></i>
                   <i class="fab fa-instagram icon"></i>
@@ -80,29 +80,35 @@
       </aside>
      <main>
       <!-- Partie adresse-->
-    <section>
-        <div class="Courgette contacttitle ">
-              <h2>Contact</h2>
-       </div>
-    </section>
-    <section> 
-        <div class="container2">
-          <div class="row">
-            <div class="col-md-8">
-                <h3 class="Courgette">Adresse</h3>
-                <p class="Oswald">Station F <br></p>
-                <p class="Oswald">5 Parvis Alan Turing<br></p>
-                <p class="Oswald">75013 Paris<br></p>
+      <div class="row">
+        <div class="col-md-10 col-lg-8 col-xl-9 mx-auto mt-3">
+            <div class="container p-3 pb-4">
+            <section>
+                <div class="Courgette contacttitle text-md-left">
+                    <h2>Contact</h2>
             </div>
-          </div>
+            </section>
+            <section> 
+                <div class="container2">
+                <div class="row">
+                    <div class="col-md-8">
+                        <h3 class="Courgette">Adresse</h3>
+                        <p class="Oswald">Station F <br></p>
+                        <p class="Oswald">5 Parvis Alan Turing<br></p>
+                        <p class="Oswald">75013 Paris<br></p>
+                    </div>
+                </div>
+                </div>
+            </section> 
+            <!-- Partie map-->
+            <section>
+                <div class="map responsive">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2626.241120643117!2d2.368575015791587!3d48.83453927928506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e673e2ee6fdea5%3A0x292dd19df5ea3792!2s5%20Parv.%20Alan%20Turing%2C%2075013%20Paris!5e0!3m2!1sfr!2sfr!4v1639053944750!5m2!1sfr!2sfr" width="60%" height="400rem" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </section>
+            </div>
         </div>
-    </section> 
-    <!-- Partie map-->
-    <section>
-        <div class="map responsive">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2626.241120643117!2d2.368575015791587!3d48.83453927928506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e673e2ee6fdea5%3A0x292dd19df5ea3792!2s5%20Parv.%20Alan%20Turing%2C%2075013%20Paris!5e0!3m2!1sfr!2sfr!4v1639053944750!5m2!1sfr!2sfr" width="60%" height="400rem" style="border:0; margin-left: 12em;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-    </section>
+      </div>
      </main>
      <footer class="text-lg-start text-white" style="background-color: #000000">
         <!-- Grid container -->
