--- a/contact.html
+++ b/contact.html
@@ -110,13 +110,13 @@
         </div>
       </div>
      </main>
-     <footer class="text-lg-start text-white" style="background-color: #000000">
+     <footer class="text-lg-start text-white pb-5" style="background-color: #000000">
         <!-- Grid container -->
         <div class="container p-4 pb-0">
           <section>
              <div class="row">
                 <div class="col-md-4 col-lg-2 col-xl-2 mx-auto mt-3">
-                  <h6 class="text-uppercase mb-4 Courgette">Catégories</h6>
+                  <h6 class="text-white mb-4 Courgette">Catégories</h6>
                   <p>
                     <a class="text-white Oswald">Revues</a>
                   </p>
@@ -128,7 +128,7 @@
                   </p>
               </div>
                <div class="col-md-4 col-lg-2 col-xl-2 mx-auto mt-3">
-                <h6 class="text-uppercase mb-4 Courgette">Archives</h6>
+                <h6 class="text-white mb-4 Courgette">Archives</h6>
                 <p>
                   <a class="text-white Oswald">2019</a>
                 </p>
