--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <section>
              <div class="row">
                 <div class="col-md-4 col-lg-2 col-xl-2 mx-auto mt-3">
-                  <h6 class="text-uppercase mb-4 Courgette">Catégories</h6>
+                  <h6 class="text-white mb-4 Courgette">Catégories</h6>
                   <p>
                     <a class="text-white Oswald">Revues</a>
                   </p>
@@ -144,7 +144,7 @@
                   </p>
               </div>
                <div class="col-md-4 col-lg-2 col-xl-2 mx-auto mt-3">
-                <h6 class="text-uppercase mb-4 Courgette">Archives</h6>
+                <h6 class="text-white mb-4 Courgette">Archives</h6>
                 <p>
                   <a class="text-white Oswald">2019</a>
                 </p>
