--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
         <div class="col-md-10 col-lg-8 col-xl-9 mx-auto mt-3">
             <div class="container p-3 pb-4">
             <section>
-                <div class="Courgette contacttitle text-md-left">
+                <div class="Courgette contacttitle">
                     <h2>Contact</h2>
             </div>
             </section>
