--- a/team.html
+++ b/team.html
@@ -27,7 +27,7 @@
                             <a class="nav-link active text-white" aria-current="page" href="../ProjetBootstrap-master/index.html">Acceuil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-muted" href="#">Equipe</a>
+                            <a class="nav-link text-muted" href="../ProjetBootstrap-master/team.html">Equipe</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-muted" href="#">Blog</a>
