--- a/team.html
+++ b/team.html
@@ -95,7 +95,9 @@
                 </div>
                 <!-- Image Antoine 1 -->
                 <div class="antoine1 icon-team text-center margin-content col-6 col-md-2 order-2 order-md-3">
+                    <a href="../ProjetBootstrap-master/team-member.html">
                     <img src="img/team/antoine.jpg" style="border-radius: 50%;" height="175rem" width="175rem">
+                    </a>
                     <h4 class="Courgette w-auto text-fixed">Antoine</h4>
                     <p class="Oswald w-auto text-fixed">Gouteur professionel</p>
                 </div>
@@ -115,7 +117,9 @@
                 </div>
                 <!-- Image Antoine 2 -->
                 <div class="antoine2 icon-team text-center margin-content col-6 col-md-2 order-3 order-md-3">
+                    <a href="../ProjetBootstrap-master/team-member.html">
                     <img src="img/team/antoine.jpg" style="border-radius: 50%;" height="175rem" width="175rem">
+                    </a>
                     <h4 class="Courgette w-auto text-fixed">Antoine</h4>
                     <p class="Oswald w-auto text-fixed">Gouteur professionel</p>
                 </div>
